Upgrade Locking system
La dernière instance ouverte prends maintenant bel et bien le lock. Un système de message plus élaboré a été mis en place